# CECTCMD

./: CMakeLists.txt
include/CECT/: ContentLoader.h  Font.h
src/: Font.cpp  Main.cpp
